added BotClient class and fixed startTheGame method, added the game logic, added some other TODOs.

--- a/JavaDocs/serialized-form.html
+++ b/JavaDocs/serialized-form.html
@@ -56,11 +56,11 @@ loadScripts(document, 'script');</script>
 <ul class="block-list">
 <li>
 <section class="serialized-package-container">
-<h2 title="Package">Package&nbsp;Server</h2>
+<h2 title="Package">Package&nbsp;server</h2>
 <ul class="block-list">
 <li>
 <section class="serialized-class-details" id="Server.Message">
-<h3>Class <a href="Server/Message.html" title="class in Server">Server.Message</a> extends <a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a> implements Serializable</h3>
+<h3>Class <a href="Server/Message.html" title="class in server">server.Message</a> extends <a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a> implements Serializable</h3>
 <ul class="block-list">
 <li>
 <section class="detail">
@@ -72,7 +72,7 @@ loadScripts(document, 'script');</script>
 </li>
 <li class="block-list">
 <h5>type</h5>
-<pre><a href="Server/MessageType.html" title="enum class in Server">MessageType</a> type</pre>
+<pre><a href="Server/MessageType.html" title="enum class in server">MessageType</a> type</pre>
 </li>
 </ul>
 </section>
