--- a/JavaDocs/index-files/index-1.html
+++ b/JavaDocs/index-files/index-1.html
@@ -56,7 +56,7 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:A">A</h2>
 <dl class="index">
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#addUser(java.lang.String)">addUser(String)</a></span> - Method in class Chat.<a href="../Chat/ClientGuiModel.html" title="class in Chat">ClientGuiModel</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#addUser(java.lang.String)">addUser(String)</a></span> - Method in class chat.<a href="../Chat/ClientGuiModel.html" title="class in chat">ClientGuiModel</a></dt>
 <dd>
 <div class="block">Add user.</div>
 </dd>
