--- a/JavaDocs/index-files/index-10.html
+++ b/JavaDocs/index-files/index-10.html
@@ -56,33 +56,33 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:R">R</h2>
 <dl class="index">
-<dt><span class="member-name-link"><a href="../Server/ConsoleHelper.html#readInt()">readInt()</a></span> - Static method in class Server.<a href="../Server/ConsoleHelper.html" title="class in Server">ConsoleHelper</a></dt>
+<dt><span class="member-name-link"><a href="../Server/ConsoleHelper.html#readInt()">readInt()</a></span> - Static method in class server.<a href="../Server/ConsoleHelper.html" title="class in server">ConsoleHelper</a></dt>
 <dd>
 <div class="block">Read int int.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/ConsoleHelper.html#readString()">readString()</a></span> - Static method in class Server.<a href="../Server/ConsoleHelper.html" title="class in Server">ConsoleHelper</a></dt>
+<dt><span class="member-name-link"><a href="../Server/ConsoleHelper.html#readString()">readString()</a></span> - Static method in class server.<a href="../Server/ConsoleHelper.html" title="class in server">ConsoleHelper</a></dt>
 <dd>
 <div class="block">Read string string.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Connection.html#receive()">receive()</a></span> - Method in class Server.<a href="../Server/Connection.html" title="class in Server">Connection</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Connection.html#receive()">receive()</a></span> - Method in class server.<a href="../Server/Connection.html" title="class in server">Connection</a></dt>
 <dd>
 <div class="block">Receive message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#refreshMessages()">refreshMessages()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#refreshMessages()">refreshMessages()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
 <div class="block">Refresh messages.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#refreshUsers()">refreshUsers()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#refreshUsers()">refreshUsers()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
 <div class="block">Refresh users.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#run()">run()</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#run()">run()</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Run methode.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#run()">run()</a></span> - Method in class Chat.<a href="../Chat/Client.SocketThread.html" title="class in Chat">Client.SocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#run()">run()</a></span> - Method in class chat.<a href="../Chat/Client.SocketThread.html" title="class in chat">Client.SocketThread</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#run()">run()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#run()">run()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>&nbsp;</dd>
 </dl>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a></main>
