--- a/JavaDocs/index-files/index-11.html
+++ b/JavaDocs/index-files/index-11.html
@@ -56,51 +56,51 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:S">S</h2>
 <dl class="index">
-<dt><span class="member-name-link"><a href="../Server/Connection.html#send(Server.Message)">send(Message)</a></span> - Method in class Server.<a href="../Server/Connection.html" title="class in Server">Connection</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Connection.html#send(Server.Message)">send(Message)</a></span> - Method in class server.<a href="../Server/Connection.html" title="class in server">Connection</a></dt>
 <dd>
 <div class="block">Send.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Server.html#sendBroadcastMessage(Server.Message)">sendBroadcastMessage(Message)</a></span> - Static method in class Server.<a href="../Server/Server.html" title="class in Server">Server</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Server.html#sendBroadcastMessage(Server.Message)">sendBroadcastMessage(Message)</a></span> - Static method in class server.<a href="../Server/Server.html" title="class in server">server</a></dt>
 <dd>
 <div class="block">Send broadcast message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Server.html#sendBroadcastMessageExceptUser(Server.Message,Server.Connection)">sendBroadcastMessageExceptUser(Message, Connection)</a></span> - Static method in class Server.<a href="../Server/Server.html" title="class in Server">Server</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Server.html#sendBroadcastMessageExceptUser(Server.Message,Server.Connection)">sendBroadcastMessageExceptUser(Message, Connection)</a></span> - Static method in class server.<a href="../Server/Server.html" title="class in server">server</a></dt>
 <dd>
 <div class="block">Send broadcast message except user.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Server.html#sendDirectMessage(Server.Message,Server.Connection)">sendDirectMessage(Message, Connection)</a></span> - Static method in class Server.<a href="../Server/Server.html" title="class in Server">Server</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Server.html#sendDirectMessage(Server.Message,Server.Connection)">sendDirectMessage(Message, Connection)</a></span> - Static method in class server.<a href="../Server/Server.html" title="class in server">server</a></dt>
 <dd>
 <div class="block">Send direct message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#sendMessageButton(javafx.event.ActionEvent)">sendMessageButton(ActionEvent)</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#sendMessageButton(javafx.event.ActionEvent)">sendMessageButton(ActionEvent)</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
 <div class="block">Send message button.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#sendTextMessage(java.lang.String)">sendTextMessage(String)</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#sendTextMessage(java.lang.String)">sendTextMessage(String)</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Send text message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#sendTextMessage(java.lang.String)">sendTextMessage(String)</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#sendTextMessage(java.lang.String)">sendTextMessage(String)</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="../Server/package-summary.html">Server</a> - package Server</dt>
+<dt><a href="../Server/package-summary.html">server</a> - package server</dt>
 <dd>&nbsp;</dd>
-<dt><a href="../Server/Server.html" title="class in Server"><span class="type-name-link">Server</span></a> - Class in <a href="../Server/package-summary.html">Server</a></dt>
+<dt><a href="../Server/Server.html" title="class in server"><span class="type-name-link">server</span></a> - Class in <a href="../Server/package-summary.html">server</a></dt>
 <dd>
-<div class="block">The type Server.Server.</div>
+<div class="block">The type server.server.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Server.html#%3Cinit%3E()">Server()</a></span> - Constructor for class Server.<a href="../Server/Server.html" title="class in Server">Server</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Server.html#%3Cinit%3E()">server()</a></span> - Constructor for class server.<a href="../Server/Server.html" title="class in server">server</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#setNewMessage(java.lang.String)">setNewMessage(String)</a></span> - Method in class Chat.<a href="../Chat/ClientGuiModel.html" title="class in Chat">ClientGuiModel</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#setNewMessage(java.lang.String)">setNewMessage(String)</a></span> - Method in class chat.<a href="../Chat/ClientGuiModel.html" title="class in chat">ClientGuiModel</a></dt>
 <dd>
 <div class="block">Sets new message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#shouldSendTextFromConsole()">shouldSendTextFromConsole()</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#shouldSendTextFromConsole()">shouldSendTextFromConsole()</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Should send text from console boolean.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#%3Cinit%3E()">SocketThread()</a></span> - Constructor for class Chat.<a href="../Chat/Client.SocketThread.html" title="class in Chat">Client.SocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#%3Cinit%3E()">SocketThread()</a></span> - Constructor for class chat.<a href="../Chat/Client.SocketThread.html" title="class in chat">Client.SocketThread</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientApplication.html#start(javafx.stage.Stage)">start(Stage)</a></span> - Method in class Chat.<a href="../Chat/ClientApplication.html" title="class in Chat">ClientApplication</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientApplication.html#start(javafx.stage.Stage)">start(Stage)</a></span> - Method in class chat.<a href="../Chat/ClientApplication.html" title="class in chat">ClientApplication</a></dt>
 <dd>&nbsp;</dd>
 </dl>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a></main>
