--- a/JavaDocs/index-files/index-2.html
+++ b/JavaDocs/index-files/index-2.html
@@ -56,71 +56,71 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:C">C</h2>
 <dl class="index">
-<dt><a href="../Chat/package-summary.html">Chat</a> - package Chat</dt>
+<dt><a href="../Chat/package-summary.html">chat</a> - package chat</dt>
 <dd>&nbsp;</dd>
-<dt><a href="../Chat/Client.html" title="class in Chat"><span class="type-name-link">Client</span></a> - Class in <a href="../Chat/package-summary.html">Chat</a></dt>
+<dt><a href="../Chat/Client.html" title="class in chat"><span class="type-name-link">Client</span></a> - Class in <a href="../Chat/package-summary.html">chat</a></dt>
 <dd>
-<div class="block">The type Chat.Client.</div>
+<div class="block">The type chat.Client.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#%3Cinit%3E()">Client()</a></span> - Constructor for class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#%3Cinit%3E()">Client()</a></span> - Constructor for class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
-<div class="block">Instantiates a new Chat.Client.</div>
+<div class="block">Instantiates a new chat.Client.</div>
 </dd>
-<dt><a href="../Chat/Client.SocketThread.html" title="class in Chat"><span class="type-name-link">Client.SocketThread</span></a> - Class in <a href="../Chat/package-summary.html">Chat</a></dt>
+<dt><a href="../Chat/Client.SocketThread.html" title="class in chat"><span class="type-name-link">Client.SocketThread</span></a> - Class in <a href="../Chat/package-summary.html">chat</a></dt>
 <dd>
 <div class="block">The type Socket thread.</div>
 </dd>
-<dt><a href="../Chat/ClientApplication.html" title="class in Chat"><span class="type-name-link">ClientApplication</span></a> - Class in <a href="../Chat/package-summary.html">Chat</a></dt>
+<dt><a href="../Chat/ClientApplication.html" title="class in chat"><span class="type-name-link">ClientApplication</span></a> - Class in <a href="../Chat/package-summary.html">chat</a></dt>
 <dd>
-<div class="block">The type Chat.Client Application.</div>
+<div class="block">The type chat.Client Application.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientApplication.html#%3Cinit%3E()">ClientApplication()</a></span> - Constructor for class Chat.<a href="../Chat/ClientApplication.html" title="class in Chat">ClientApplication</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientApplication.html#%3Cinit%3E()">ClientApplication()</a></span> - Constructor for class chat.<a href="../Chat/ClientApplication.html" title="class in chat">ClientApplication</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="../Chat/ClientGuiController.html" title="class in Chat"><span class="type-name-link">ClientGuiController</span></a> - Class in <a href="../Chat/package-summary.html">Chat</a></dt>
+<dt><a href="../Chat/ClientGuiController.html" title="class in chat"><span class="type-name-link">ClientGuiController</span></a> - Class in <a href="../Chat/package-summary.html">chat</a></dt>
 <dd>
-<div class="block">The type Chat.Client GUI Controller.</div>
+<div class="block">The type chat.Client GUI Controller.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#%3Cinit%3E()">ClientGuiController()</a></span> - Constructor for class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#%3Cinit%3E()">ClientGuiController()</a></span> - Constructor for class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
-<div class="block">Instantiates a new Chat.Client.</div>
+<div class="block">Instantiates a new chat.Client.</div>
 </dd>
-<dt><a href="../Chat/ClientGuiController.GuiSocketThread.html" title="class in Chat"><span class="type-name-link">ClientGuiController.GuiSocketThread</span></a> - Class in <a href="../Chat/package-summary.html">Chat</a></dt>
+<dt><a href="../Chat/ClientGuiController.GuiSocketThread.html" title="class in chat"><span class="type-name-link">ClientGuiController.GuiSocketThread</span></a> - Class in <a href="../Chat/package-summary.html">chat</a></dt>
 <dd>
 <div class="block">The type GUI Socket Thread.</div>
 </dd>
-<dt><a href="../Chat/ClientGuiModel.html" title="class in Chat"><span class="type-name-link">ClientGuiModel</span></a> - Class in <a href="../Chat/package-summary.html">Chat</a></dt>
+<dt><a href="../Chat/ClientGuiModel.html" title="class in chat"><span class="type-name-link">ClientGuiModel</span></a> - Class in <a href="../Chat/package-summary.html">chat</a></dt>
 <dd>
-<div class="block">The type Chat.Client GUI Model.</div>
+<div class="block">The type chat.Client GUI Model.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#%3Cinit%3E()">ClientGuiModel()</a></span> - Constructor for class Chat.<a href="../Chat/ClientGuiModel.html" title="class in Chat">ClientGuiModel</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#%3Cinit%3E()">ClientGuiModel()</a></span> - Constructor for class chat.<a href="../Chat/ClientGuiModel.html" title="class in chat">ClientGuiModel</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#clientHandshake()">clientHandshake()</a></span> - Method in class Chat.<a href="../Chat/Client.SocketThread.html" title="class in Chat">Client.SocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#clientHandshake()">clientHandshake()</a></span> - Method in class chat.<a href="../Chat/Client.SocketThread.html" title="class in chat">Client.SocketThread</a></dt>
 <dd>
-<div class="block">Chat.Client Handshake.</div>
+<div class="block">chat.Client Handshake.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#clientMainLoop()">clientMainLoop()</a></span> - Method in class Chat.<a href="../Chat/Client.SocketThread.html" title="class in Chat">Client.SocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#clientMainLoop()">clientMainLoop()</a></span> - Method in class chat.<a href="../Chat/Client.SocketThread.html" title="class in chat">Client.SocketThread</a></dt>
 <dd>
-<div class="block">Chat.Client main loop.</div>
+<div class="block">chat.Client main loop.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Connection.html#close()">close()</a></span> - Method in class Server.<a href="../Server/Connection.html" title="class in Server">Connection</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Connection.html#close()">close()</a></span> - Method in class server.<a href="../Server/Connection.html" title="class in server">Connection</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#connection">connection</a></span> - Variable in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#connection">connection</a></span> - Variable in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
-<div class="block">The Server.Connection.</div>
+<div class="block">The server.Connection.</div>
 </dd>
-<dt><a href="../Server/Connection.html" title="class in Server"><span class="type-name-link">Connection</span></a> - Class in <a href="../Server/package-summary.html">Server</a></dt>
+<dt><a href="../Server/Connection.html" title="class in server"><span class="type-name-link">Connection</span></a> - Class in <a href="../Server/package-summary.html">server</a></dt>
 <dd>
-<div class="block">The type Server.Connection.</div>
+<div class="block">The type server.Connection.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Connection.html#%3Cinit%3E(java.net.Socket)">Connection(Socket)</a></span> - Constructor for class Server.<a href="../Server/Connection.html" title="class in Server">Connection</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Connection.html#%3Cinit%3E(java.net.Socket)">Connection(Socket)</a></span> - Constructor for class server.<a href="../Server/Connection.html" title="class in server">Connection</a></dt>
 <dd>
-<div class="block">Instantiates a new Server.Connection.</div>
+<div class="block">Instantiates a new server.Connection.</div>
 </dd>
-<dt><a href="../Server/ConsoleHelper.html" title="class in Server"><span class="type-name-link">ConsoleHelper</span></a> - Class in <a href="../Server/package-summary.html">Server</a></dt>
+<dt><a href="../Server/ConsoleHelper.html" title="class in server"><span class="type-name-link">ConsoleHelper</span></a> - Class in <a href="../Server/package-summary.html">server</a></dt>
 <dd>
-<div class="block">The type Server.Console Helper.</div>
+<div class="block">The type server.Console Helper.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/ConsoleHelper.html#%3Cinit%3E()">ConsoleHelper()</a></span> - Constructor for class Server.<a href="../Server/ConsoleHelper.html" title="class in Server">ConsoleHelper</a></dt>
+<dt><span class="member-name-link"><a href="../Server/ConsoleHelper.html#%3Cinit%3E()">ConsoleHelper()</a></span> - Constructor for class server.<a href="../Server/ConsoleHelper.html" title="class in server">ConsoleHelper</a></dt>
 <dd>&nbsp;</dd>
 </dl>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a></main>
