--- a/JavaDocs/index-files/index-4.html
+++ b/JavaDocs/index-files/index-4.html
@@ -56,57 +56,57 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:G">G</h2>
 <dl class="index">
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#getAllUserNames()">getAllUserNames()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiModel.html" title="class in Chat">ClientGuiModel</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#getAllUserNames()">getAllUserNames()</a></span> - Method in class chat.<a href="../Chat/ClientGuiModel.html" title="class in chat">ClientGuiModel</a></dt>
 <dd>
 <div class="block">Gets all user names.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Message.html#getData()">getData()</a></span> - Method in class Server.<a href="../Server/Message.html" title="class in Server">Message</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Message.html#getData()">getData()</a></span> - Method in class server.<a href="../Server/Message.html" title="class in server">Message</a></dt>
 <dd>
 <div class="block">Gets data.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getModel()">getModel()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getModel()">getModel()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
 <div class="block">Gets model.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#getNewMessage()">getNewMessage()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiModel.html" title="class in Chat">ClientGuiModel</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiModel.html#getNewMessage()">getNewMessage()</a></span> - Method in class chat.<a href="../Chat/ClientGuiModel.html" title="class in chat">ClientGuiModel</a></dt>
 <dd>
 <div class="block">Gets new message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Connection.html#getRemoteSocketAddress()">getRemoteSocketAddress()</a></span> - Method in class Server.<a href="../Server/Connection.html" title="class in Server">Connection</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Connection.html#getRemoteSocketAddress()">getRemoteSocketAddress()</a></span> - Method in class server.<a href="../Server/Connection.html" title="class in server">Connection</a></dt>
 <dd>
 <div class="block">Gets remote socket address.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#getServerAddress()">getServerAddress()</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#getServerAddress()">getServerAddress()</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Gets server address.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getServerAddress()">getServerAddress()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getServerAddress()">getServerAddress()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#getServerPort()">getServerPort()</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#getServerPort()">getServerPort()</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Gets server port.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getServerPort()">getServerPort()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getServerPort()">getServerPort()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#getSocketThread()">getSocketThread()</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#getSocketThread()">getSocketThread()</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Gets socket thread.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getSocketThread()">getSocketThread()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getSocketThread()">getSocketThread()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Server/Message.html#getType()">getType()</a></span> - Method in class Server.<a href="../Server/Message.html" title="class in Server">Message</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Message.html#getType()">getType()</a></span> - Method in class server.<a href="../Server/Message.html" title="class in server">Message</a></dt>
 <dd>
 <div class="block">Gets type.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.html#getUserName()">getUserName()</a></span> - Method in class Chat.<a href="../Chat/Client.html" title="class in Chat">Client</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.html#getUserName()">getUserName()</a></span> - Method in class chat.<a href="../Chat/Client.html" title="class in chat">Client</a></dt>
 <dd>
 <div class="block">Gets user name.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getUserName()">getUserName()</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#getUserName()">getUserName()</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
 <div class="block">Gets user name.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.GuiSocketThread.html#%3Cinit%3E()">GuiSocketThread()</a></span> - Constructor for class Chat.<a href="../Chat/ClientGuiController.GuiSocketThread.html" title="class in Chat">ClientGuiController.GuiSocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.GuiSocketThread.html#%3Cinit%3E()">GuiSocketThread()</a></span> - Constructor for class chat.<a href="../Chat/ClientGuiController.GuiSocketThread.html" title="class in chat">ClientGuiController.GuiSocketThread</a></dt>
 <dd>&nbsp;</dd>
 </dl>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a></main>
