--- a/JavaDocs/index-files/index-7.html
+++ b/JavaDocs/index-files/index-7.html
@@ -56,29 +56,29 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:M">M</h2>
 <dl class="index">
-<dt><span class="member-name-link"><a href="../Chat/ClientApplication.html#main(java.lang.String%5B%5D)">main(String[])</a></span> - Static method in class Chat.<a href="../Chat/ClientApplication.html" title="class in Chat">ClientApplication</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientApplication.html#main(java.lang.String%5B%5D)">main(String[])</a></span> - Static method in class chat.<a href="../Chat/ClientApplication.html" title="class in chat">ClientApplication</a></dt>
 <dd>
 <div class="block">The entry point of application.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Server.html#main(java.lang.String%5B%5D)">main(String[])</a></span> - Static method in class Server.<a href="../Server/Server.html" title="class in Server">Server</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Server.html#main(java.lang.String%5B%5D)">main(String[])</a></span> - Static method in class server.<a href="../Server/Server.html" title="class in server">server</a></dt>
 <dd>
 <div class="block">The entry point of application.</div>
 </dd>
-<dt><a href="../Server/Message.html" title="class in Server"><span class="type-name-link">Message</span></a> - Class in <a href="../Server/package-summary.html">Server</a></dt>
+<dt><a href="../Server/Message.html" title="class in server"><span class="type-name-link">Message</span></a> - Class in <a href="../Server/package-summary.html">server</a></dt>
 <dd>
-<div class="block">The type Server.Message.</div>
+<div class="block">The type server.Message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Message.html#%3Cinit%3E(Server.MessageType)">Message(MessageType)</a></span> - Constructor for class Server.<a href="../Server/Message.html" title="class in Server">Message</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Message.html#%3Cinit%3E(Server.MessageType)">Message(MessageType)</a></span> - Constructor for class server.<a href="../Server/Message.html" title="class in server">Message</a></dt>
 <dd>
-<div class="block">Instantiates a new Server.Message.</div>
+<div class="block">Instantiates a new server.Message.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/Message.html#%3Cinit%3E(Server.MessageType,java.lang.String)">Message(MessageType, String)</a></span> - Constructor for class Server.<a href="../Server/Message.html" title="class in Server">Message</a></dt>
+<dt><span class="member-name-link"><a href="../Server/Message.html#%3Cinit%3E(Server.MessageType,java.lang.String)">Message(MessageType, String)</a></span> - Constructor for class server.<a href="../Server/Message.html" title="class in server">Message</a></dt>
 <dd>
-<div class="block">Instantiates a new Server.Message.</div>
+<div class="block">Instantiates a new server.Message.</div>
 </dd>
-<dt><a href="../Server/MessageType.html" title="enum class in Server"><span class="type-name-link">MessageType</span></a> - Enum Class in <a href="../Server/package-summary.html">Server</a></dt>
+<dt><a href="../Server/MessageType.html" title="enum class in server"><span class="type-name-link">MessageType</span></a> - Enum Class in <a href="../Server/package-summary.html">server</a></dt>
 <dd>
-<div class="block">The enum Server.Message Type.</div>
+<div class="block">The enum server.Message Type.</div>
 </dd>
 </dl>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a></main>
