--- a/JavaDocs/index-files/index-8.html
+++ b/JavaDocs/index-files/index-8.html
@@ -56,21 +56,21 @@ loadScripts(document, 'script');</script>
 <a href="index-1.html">A</a>&nbsp;<a href="index-2.html">C</a>&nbsp;<a href="index-3.html">D</a>&nbsp;<a href="index-4.html">G</a>&nbsp;<a href="index-5.html">I</a>&nbsp;<a href="index-6.html">L</a>&nbsp;<a href="index-7.html">M</a>&nbsp;<a href="index-8.html">N</a>&nbsp;<a href="index-9.html">P</a>&nbsp;<a href="index-10.html">R</a>&nbsp;<a href="index-11.html">S</a>&nbsp;<a href="index-12.html">T</a>&nbsp;<a href="index-13.html">U</a>&nbsp;<a href="index-14.html">V</a>&nbsp;<a href="index-15.html">W</a>&nbsp;<br><a href="../allclasses-index.html">All&nbsp;Classes</a><span class="vertical-separator">|</span><a href="../allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="../serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:N">N</h2>
 <dl class="index">
-<dt><span class="member-name-link"><a href="../Server/MessageType.html#NAME_ACCEPTED">NAME_ACCEPTED</a></span> - Enum constant in enum class Server.<a href="../Server/MessageType.html" title="enum class in Server">MessageType</a></dt>
+<dt><span class="member-name-link"><a href="../Server/MessageType.html#NAME_ACCEPTED">NAME_ACCEPTED</a></span> - Enum constant in enum class server.<a href="../Server/MessageType.html" title="enum class in server">MessageType</a></dt>
 <dd>
 <div class="block">Name accepted message type.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Server/MessageType.html#NAME_REQUEST">NAME_REQUEST</a></span> - Enum constant in enum class Server.<a href="../Server/MessageType.html" title="enum class in Server">MessageType</a></dt>
+<dt><span class="member-name-link"><a href="../Server/MessageType.html#NAME_REQUEST">NAME_REQUEST</a></span> - Enum constant in enum class server.<a href="../Server/MessageType.html" title="enum class in server">MessageType</a></dt>
 <dd>
 <div class="block">Name request message type.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#notifyConnectionStatusChanged(boolean)">notifyConnectionStatusChanged(boolean)</a></span> - Method in class Chat.<a href="../Chat/Client.SocketThread.html" title="class in Chat">Client.SocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/Client.SocketThread.html#notifyConnectionStatusChanged(boolean)">notifyConnectionStatusChanged(boolean)</a></span> - Method in class chat.<a href="../Chat/Client.SocketThread.html" title="class in chat">Client.SocketThread</a></dt>
 <dd>
 <div class="block">Notify connection status changed.</div>
 </dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.GuiSocketThread.html#notifyConnectionStatusChanged(boolean)">notifyConnectionStatusChanged(boolean)</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.GuiSocketThread.html" title="class in Chat">ClientGuiController.GuiSocketThread</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.GuiSocketThread.html#notifyConnectionStatusChanged(boolean)">notifyConnectionStatusChanged(boolean)</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.GuiSocketThread.html" title="class in chat">ClientGuiController.GuiSocketThread</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#notifyConnectionStatusChanged(boolean)">notifyConnectionStatusChanged(boolean)</a></span> - Method in class Chat.<a href="../Chat/ClientGuiController.html" title="class in Chat">ClientGuiController</a></dt>
+<dt><span class="member-name-link"><a href="../Chat/ClientGuiController.html#notifyConnectionStatusChanged(boolean)">notifyConnectionStatusChanged(boolean)</a></span> - Method in class chat.<a href="../Chat/ClientGuiController.html" title="class in chat">ClientGuiController</a></dt>
 <dd>
 <div class="block">Notify connection status changed.</div>
 </dd>
