--- a/JavaDocs/overview-tree.html
+++ b/JavaDocs/overview-tree.html
@@ -54,8 +54,8 @@ loadScripts(document, 'script');</script>
 <h1 class="title">Hierarchy For All Packages</h1>
 <span class="package-hierarchy-label">Package Hierarchies:</span>
 <ul class="horizontal">
-<li><a href="Chat/package-tree.html">Chat</a>, </li>
-<li><a href="Server/package-tree.html">Server</a></li>
+<li><a href="Chat/package-tree.html">chat</a>, </li>
+<li><a href="Server/package-tree.html">server</a></li>
 </ul>
 </div>
 <section class="hierarchy">
@@ -65,24 +65,24 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">javafx.application.Application
 <ul>
-<li class="circle">Chat.<a href="Chat/ClientApplication.html" title="class in Chat"><span class="type-name-link">ClientApplication</span></a></li>
+<li class="circle">chat.<a href="Chat/ClientApplication.html" title="class in chat"><span class="type-name-link">ClientApplication</span></a></li>
 </ul>
 </li>
-<li class="circle">Chat.<a href="Chat/Client.html" title="class in Chat"><span class="type-name-link">Client</span></a>
+<li class="circle">chat.<a href="Chat/Client.html" title="class in chat"><span class="type-name-link">Client</span></a>
 <ul>
-<li class="circle">Chat.<a href="Chat/ClientGuiController.html" title="class in Chat"><span class="type-name-link">ClientGuiController</span></a></li>
+<li class="circle">chat.<a href="Chat/ClientGuiController.html" title="class in chat"><span class="type-name-link">ClientGuiController</span></a></li>
 </ul>
 </li>
-<li class="circle">Chat.<a href="Chat/ClientGuiModel.html" title="class in Chat"><span class="type-name-link">ClientGuiModel</span></a></li>
-<li class="circle">Server.<a href="Server/Connection.html" title="class in Server"><span class="type-name-link">Connection</span></a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/io/Closeable.html" title="class or interface in java.io" class="external-link">Closeable</a>)</li>
-<li class="circle">Server.<a href="Server/ConsoleHelper.html" title="class in Server"><span class="type-name-link">ConsoleHelper</span></a></li>
-<li class="circle">Server.<a href="Server/Message.html" title="class in Server"><span class="type-name-link">Message</span></a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)</li>
-<li class="circle">Server.<a href="Server/Server.html" title="class in Server"><span class="type-name-link">Server</span></a></li>
+<li class="circle">chat.<a href="Chat/ClientGuiModel.html" title="class in chat"><span class="type-name-link">ClientGuiModel</span></a></li>
+<li class="circle">server.<a href="Server/Connection.html" title="class in server"><span class="type-name-link">Connection</span></a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/io/Closeable.html" title="class or interface in java.io" class="external-link">Closeable</a>)</li>
+<li class="circle">server.<a href="Server/ConsoleHelper.html" title="class in server"><span class="type-name-link">ConsoleHelper</span></a></li>
+<li class="circle">server.<a href="Server/Message.html" title="class in server"><span class="type-name-link">Message</span></a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)</li>
+<li class="circle">server.<a href="Server/Server.html" title="class in server"><span class="type-name-link">server</span></a></li>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Thread.html" title="class or interface in java.lang" class="external-link"><span class="type-name-link">Thread</span></a> (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Runnable.html" title="class or interface in java.lang" class="external-link">Runnable</a>)
 <ul>
-<li class="circle">Chat.<a href="Chat/Client.SocketThread.html" title="class in Chat"><span class="type-name-link">Client.SocketThread</span></a>
+<li class="circle">chat.<a href="Chat/Client.SocketThread.html" title="class in chat"><span class="type-name-link">Client.SocketThread</span></a>
 <ul>
-<li class="circle">Chat.<a href="Chat/ClientGuiController.GuiSocketThread.html" title="class in Chat"><span class="type-name-link">ClientGuiController.GuiSocketThread</span></a></li>
+<li class="circle">chat.<a href="Chat/ClientGuiController.GuiSocketThread.html" title="class in chat"><span class="type-name-link">ClientGuiController.GuiSocketThread</span></a></li>
 </ul>
 </li>
 </ul>
@@ -98,7 +98,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Enum.html" title="class or interface in java.lang" class="external-link"><span class="type-name-link">Enum</span></a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
-<li class="circle">Server.<a href="Server/MessageType.html" title="enum class in Server"><span class="type-name-link">MessageType</span></a></li>
+<li class="circle">server.<a href="Server/MessageType.html" title="enum class in server"><span class="type-name-link">MessageType</span></a></li>
 </ul>
 </li>
 </ul>
